--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #63c297
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -12,7 +12,7 @@ $black: #2b2523
 
 .navbar .navbar-menu
   box-shadow:none !important
-  
+
 
 .content .taglist
   list-style: none
@@ -45,7 +45,7 @@ $black: #2b2523
 
 .full-width-image
     width: 100vw
-    height: 400px
+    height: 100vh
     background-size: cover
     background-position: bottom
     display: flex
