added title to banner

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -50,7 +50,8 @@ $black: #2b2523
     background-position: bottom
     display: flex
     justify-content: center
-    align-items: center
+    overflow: hidden
+
 
 .btn
     display: inline-block
